--- a/src/app/trusts/trusts.component.html
+++ b/src/app/trusts/trusts.component.html
@@ -17,7 +17,7 @@
       </form>
     </div>
   </div>
-  <div class="row">
+  <div class="row" *ngIf="trusts">
     <div class="col-4 card" *ngFor="let trust of trusts">
       <img class="card-img-top" src="assets/img/logo_width.png"/>
       <div class="card-body">
@@ -30,7 +30,7 @@
         <footer class="blockquote-footer">
           {{trust.specialDescription}}
         </footer>
-        <button class="btn btn-others">Join</button>
+        <button class="btn btn-others" (click)='joinTrust(trust.name)'>Join</button>
       </div>
     </div>
   </div>
