--- a/src/app/trust/trust.component.html
+++ b/src/app/trust/trust.component.html
@@ -58,6 +58,9 @@
       </div>
     </div>
   </div>
-
+  <div *ngIf="toggles['members']">
+  </div>
+  <div *ngIf="toggles['policies']">
+  </div>
   <app-footer></app-footer>
 </div>
