--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,7 @@
     outline: none;
 }
 body {
-  color: white !important;
+  color: black !important;
   font-family: 'Roboto-Regular' !important;
 }
 button {
