--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,7 +12,8 @@
             <app-flux-box *ngIf="showFlux"></app-flux-box>
           </div>
           <div class="col-3 align-self-center">
-            <input class="h-100 form-control" placeholder="Search">
+            <input class="h-100 form-control" placeholder="Search" name="searchInput" [(ngModel)]="searchInput" (click)="showSearchBox();" (input)="search.update(searchInput);">
+            <app-search-box #search *ngIf="showSearch"></app-search-box>
           </div>
           <div class="col-2 align-self-center" *ngIf="!isAnonymous">
             <button class="h-100 button btn-others" routerLink="/trusts">Trust Center</button>
