--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
 <div class="container-fluid p-0 content">
   <app-header></app-header>
   <div class="row">
-    <div [ngClass]='getFeedClass()'>
+    <div>
       <app-feed-home></app-feed-home>
     </div>
   </div>
