--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -26,7 +26,7 @@
   .background {
     position: relative;
     width: 100%;
-    background-image: url("assets/img/logo.png");
+    background-image: url("/assets/img/logo.png");
     background-repeat: no-repeat;
     background-attachment: fixed;
     &::before {
@@ -34,7 +34,7 @@
       position: absolute;
       top: 0; right: 0;
       bottom: 0; left: 0;
-      background: url("assets/img/ballon.jpg") no-repeat top center;
+      background: url("/assets/img/ballon.jpg") no-repeat top center;
       opacity: 0.5;
     }
     .blocks {
