--- a/src/app/my-profile/my-profile.component.html
+++ b/src/app/my-profile/my-profile.component.html
@@ -6,7 +6,8 @@
       <div class="p-4 mt-1 card">
         <div class="card-body">
           <div class="card">**Presentation of me**</div>
-          <div>Reputation XXX</div>
+          <div>{{user?.fullName}}</div>
+          <div>Reputation {{user?.reputation}}</div>
           <div>Reputation of last 10 posts</div>
           <div>Followed by XXX</div>
           <div>Live at *region*/*country*</div>
