--- a/src/app/trusts/trusts.component.html
+++ b/src/app/trusts/trusts.component.html
@@ -30,7 +30,7 @@
         <footer class="blockquote-footer">
           {{trust.specialDescription}}
         </footer>
-        <button class="btn btn-others" (click)='joinTrust(trust.name)'>Join</button>
+        <button class="btn btn-others" (click)='joinTrust(trust._id, trust.key)'>Join</button>
       </div>
     </div>
   </div>
