--- a/src/app/circles/circles.component.html
+++ b/src/app/circles/circles.component.html
@@ -12,7 +12,7 @@
     </div>
     <div class="col-4" *ngFor="let trust of ownedTrusts">
       <a routerLink="/trust/{{trust.key}}">
-        {{trust.name}}
+        {{trust?.name}}
       </a>
     </div>
   </div>
@@ -22,7 +22,7 @@
     </div>
     <div class="col-4" *ngFor="let trust of joinedTrusts">
       <a routerLink="/trust/{{trust}}">
-        {{trust}}
+        {{trust?.name}}
       </a>
     </div>
   </div>
@@ -36,30 +36,6 @@
       {{friend.firstName}} {{friend.lastName}}
     </div>
   </div>
-  <div class="row">
-    <div class="col-12">
-      Your requests
-    </div>
-  </div>
-  <div class="row" *ngIf="trustsRequests?.length !== 0 || friendsRequests?.length !== 0">
-    <div [ngClass]="getRequestsClass()" *ngIf="trustsRequests?.length !== 0">
-      <div *ngFor="let request of trustsRequests">
-        {{request}}
-      </div>
-    </div>
-    <div [ngClass]="getRequestsClass()" *ngIf="friendsRequests?.length !== 0">
-      <div *ngFor="let request of friendsRequests">
-        <span *ngIf="request.firstName && request.lastName">
-          {{request.firstName}} {{request.lastName}}
-        </span>
-        <span *ngIf="request.userName">
-          {{request.userName}}
-        </span>
-        <span (click)="acceptFriend(request._id)">
-          <a>+</a>
-        </span>
-      </div>
-    </div>
-  </div>
+
   <app-footer></app-footer>
 </div>
