--- a/src/app/trust/trust.component.html
+++ b/src/app/trust/trust.component.html
@@ -20,7 +20,7 @@
     </div>
     <div class="offset-1 col-10">
       <div class="container">
-        <div *ngIf="toggles['home']">
+        <div *ngIf="toggles.home">
           <div class="row">
             <div class="col-12 justify-content-center align-self-center">
               <form>
@@ -49,7 +49,7 @@
             </div>
           </div>
         </div>
-        <div *ngIf="toggles['members']">
+        <div *ngIf="toggles.members">
           <div class="row mt-2">
             <div class="offset-4 col-4 text-center w-100 inspiration">
               <h2 class="title">
@@ -87,13 +87,13 @@
             </div>
           </div>
         </div>
-        <div *ngIf="toggles['policies']">
+        <div *ngIf="toggles.policies">
           <div class="row mt-2">
             <div class="offset-3 col-6">
               Our policies
             </div>
           </div>
-          <div class="row mt-2" *ngFor="let policy of trust.policies">
+          <div class="row mt-2" *ngFor="let policy of trust?.policies">
             <div class="offset-3 col-6">
               {{policy}}
             </div>
@@ -102,7 +102,7 @@
             <div class="row mt-2">
               <div class="offset-3 col-6">
                 <textarea name="newPolicy" [(ngModel)]="newPolicy"></textarea>
-                <button (click)="createPolicy()"
+                <button (click)="createPolicy()">+</button>
               </div>
             </div>
           </form>
