--- a/src/app/search-box/search-box.component.html
+++ b/src/app/search-box/search-box.component.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <div class="search-box">
-  <div *ngFor="let user of usersDisplayed">
-    {{user.firstName}} {{user.lastName}}
+  <div *ngFor="let user of users$ | async">
+    {{user.fullName}}
     <a (click)="addFriend(user._id)">+</a>
   </div>
 </div>
