--- a/src/app/trusts/trusts.component.html
+++ b/src/app/trusts/trusts.component.html
@@ -30,7 +30,8 @@
         <footer class="blockquote-footer">
           {{trust.specialDescription}}
         </footer>
-        <button class="btn btn-others" (click)='joinTrust(trust._id, trust.key)'>Join</button>
+        <button class="btn btn-others" (click)="joinTrust(trust._id, trust.key)" *ngIf="!trust.partOf">Join</button>
+        <button class="btn btn-others" routerLink="/trust/{{trust.key}}" *ngIf="trust.partOf">Enter</button>
       </div>
     </div>
   </div>
