--- a/src/app/search-box/search-box.component.html
+++ b/src/app/search-box/search-box.component.html
@@ -2,6 +2,6 @@
 <div class="search-box">
   <div *ngFor="let user of users$ | async">
     {{user.fullName}}
-    <a (click)="addFriend(user._id)">+</a>
+    <a (click)="addFriend(user._id)" *ngIf="!user.friendWith">+</a>
   </div>
 </div>
