--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -214,7 +214,7 @@
           <form class="subscribe" name="eminentSubscriptionForm" (ngSubmit)="subscribe(false)">
             <div class="form-group">
               <label for="newEminentUsername">Username</label>
-              <input class="pl-3 m-2 w-100" id="newEminentUsername" type="text" name="newEminentUsername" placeholder="Ex: Jahnie" [(ngModel)]="newEminentUser.username">
+              <input class="pl-3 m-2 w-100" id="newEminentUsername" type="text" name="newEminentUsername" placeholder="Ex: Jahnie" [(ngModel)]="newEminentUser.userName">
             </div>
             <div class="form-group">
               <label for="newEminentEmail">Email</label>
