--- a/src/app/circles/circles.component.html
+++ b/src/app/circles/circles.component.html
@@ -33,7 +33,7 @@
   </div>
   <div class="row" *ngIf="friends?.length !== 0">
     <div class="col-4" *ngFor="let friend of friends">
-      {{friend.firstName}} {{friend.lastName}}
+      {{friend.fullName}}
     </div>
   </div>
 
