--- a/src/app/trust/trust.component.html
+++ b/src/app/trust/trust.component.html
@@ -37,7 +37,7 @@
             <div class="col-12 feed">
               <div class="post m-3 p-3" *ngFor="let post of posts">
                 <h3>
-                  {{post.owner.fullName}}
+                  {{post.author.fullName}}
                 </h3>
                 <div class="reputation">
                   {{post.reputation}}
