--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<div class="container-fluid p-0 content">
+<div class="container-fluid content">
   <app-header></app-header>
   <app-feed-home></app-feed-home>
   <app-footer></app-footer>
