--- a/src/app/feed-my-profile/feed-my-profile.component.html
+++ b/src/app/feed-my-profile/feed-my-profile.component.html
@@ -3,9 +3,19 @@
   <div *ngFor="let post of posts">
     <div class="card">
       <div class="card-body">
-        <button class="close-post-button" (click)="close(post.id)">x</button>
-        <div [innerHTML]="post.content | emojis"></div><a class="btn btn-primary">More</a>
-        <div class="font-italic">Yesterday</div>
+        <div>
+          On {{post.originName}}
+        </div>
+        <div>
+          +{{post.reputation.upvotes}} / -{{post.reputation.downvotes}}
+        </div>
+        <div [innerHTML]="post.content | emojis"></div>
+        <div class="font-italic">
+          {{post.createdOn}}
+        </div>
+        <div>
+          {{pos}}
+        </div>
       </div>
     </div>
   </div>
