--- a/src/app/my-profile/my-profile.component.html
+++ b/src/app/my-profile/my-profile.component.html
@@ -7,7 +7,7 @@
         <div class="card-body">
           <div class="card">**Presentation of me**</div>
           <div>{{user?.fullName}}</div>
-          <div>Reputation {{user?.reputation}}</div>
+          <div>Reputation : rank {{user?.reputation.rank}}</div>
           <div>Reputation of last 10 posts</div>
           <div>Followed by XXX</div>
           <div>Live at *region*/*country*</div>
