--- a/src/app/trusts/trusts.component.html
+++ b/src/app/trusts/trusts.component.html
@@ -32,7 +32,7 @@
         </footer>
         <button class="btn btn-others" *ngIf="trust.requested">Application sent</button>
         <button class="btn btn-others" (click)="joinTrust(trust._id, trust.key)" *ngIf="!trust.requested && !trust.partOf">Join</button>
-        <button class="btn btn-others" routerLink="/trust/{{trust.key}}" *ngIf="!trust.requested && trust.partOf">Enter</button>
+        <button class="btn btn-others" (click)="enterTrust(trust.name)" *ngIf="!trust.requested && trust.partOf">Enter</button>
       </div>
     </div>
   </div>
