--- a/src/app/flux-box/flux-box.component.html
+++ b/src/app/flux-box/flux-box.component.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <div class="flux-box">
   <div class="col-12 w-100">
-    <button class="btn d-block mx-auto" [ngClass]="displayedFluxes.tendance ? 'btn-tendance' : 'btn-secondary'" (click)="toggleFlux(tendance)">Tendance</button>
+    <button class="btn d-block mx-auto" [ngClass]="displayedFluxes.Tendance ? 'btn-tendance' : 'btn-secondary'" (click)="toggleFlux(tendance)">Tendance</button>
   </div>
   <div class="col-12 w-100">
-    <button class="btn d-block mx-auto" [ngClass]="displayedFluxes.friends ? 'btn-friend' : 'btn-secondary'" (click)="toggleFlux(friends)">Friend</button>
+    <button class="btn d-block mx-auto" [ngClass]="displayedFluxes.Friends ? 'btn-friend' : 'btn-secondary'" (click)="toggleFlux(friends)">Friend</button>
   </div>
   <div class="col-12 w-100">
-    <button class="btn d-block mx-auto" [ngClass]="displayedFluxes.dailyLife ? 'btn-daily' : 'btn-secondary'" (click)="toggleFlux(dailyLife)" >Daily Life</button>
+    <button class="btn d-block mx-auto" [ngClass]="displayedFluxes.DailyLife ? 'btn-daily' : 'btn-secondary'" (click)="toggleFlux(dailyLife)" >Daily Life</button>
   </div>
   <div class="col-12 w-100">
-    <button class="btn d-block mx-auto" [ngClass]="displayedFluxes.lifeStyle ? 'btn-style' : 'btn-secondary'" (click)="toggleFlux(lifeStyle)">Life Style</button>
+    <button class="btn d-block mx-auto" [ngClass]="displayedFluxes.LifeStyle ? 'btn-style' : 'btn-secondary'" (click)="toggleFlux(lifeStyle)">Life Style</button>
   </div>
 </div>
