--- a/src/app/feed-home/feed-home.component.html
+++ b/src/app/feed-home/feed-home.component.html
@@ -2,7 +2,8 @@
 <div *ngFor="let post of feed$ | async">
   <div class="row">
     <div class="col-3" [ngClass]="getPostTypeStyle(post.type)">
-      {{post.reputation.upvotes}}
+      +{{post.reputation.upvotes}}
+      -{{post.reputation.downvotes}}
       {{post.createdOn}}
       {{post.author.fullName}}
     </div>
